# backUpHelper

./: .gitignore  README.md  app_info.py  desktop.py  main.py  pyproject.toml
.github/workflows/: build-windows-exe.yml
adapters/: __init__.py  catalog.py
backup/: __init__.py  full_backup.py  package.py  selection_preview.py  volumes.py  walker.py
core/: __init__.py  cancellation.py  checksum.py  encryption.py  logging_config.py  models.py  paths.py  serialization.py  temporary.py
inventory/: __init__.py  conda.py  icons.py  installed_apps.py  registry.py
preview/: __init__.py  file_preview.py  package_reader.py
restore/: __init__.py  executor.py  planner.py
scripts/: download_7zip.py
tests/: test_archive_file_preview.py  test_catalog.py  test_conda.py  test_encryption.py  test_package.py  test_restore.py  test_settings_state.py
ui/: __init__.py  app.py  archive_file_preview.py  i18n.py  settings_state.py
